--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="my_primary">#ECEBEE</color>
+    <color name="my_secondary">#C5B714</color>
+    <color name="my_statusbar">#9991AA</color>
+    <color name="my_text">#AA152A</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
