--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorSecondary">@color/my_secondary</item>
         <item name="android:statusBarColor">@color/my_statusbar</item>
         <item name="android:textColor">@color/my_text</item>
+        <item name="android:button">@color/my_text</item>
     </style>
 
     <style name="Theme.MurtujasAndroidLab" parent="Base.Theme.MurtujasAndroidLab" />
